QThreadStorage: fix memory leak if thread storage are added while destroying

The destructor(q) function could use itself and create new QThreadStorage.
This might be the case for example, when using qDebug in a destructor.

Task-number: QTBUG-14579
Reveiwed-by: Joao
Reviewed-by: Brad